form completed and placeholder chart

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "postcss-cli": "^8.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.0",
     "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
     "tailwindcss": "^1.8.10"
   },
   "scripts": {
-    "start": "npm run watch:css & react-scripts start",
+    "start": "react-scripts start",
     "build": "npm run build:css & react-scripts build",
     "build:css": "postcss src/css/tailwind.css -o src/css/styles.css",
     "watch:css": "postcss src/css/tailwind.css -o src/css/styles.css",
