--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^10.0.1",
+    "axios": "^0.20.0",
+    "mathjs": "^7.3.0",
+    "nerdamer": "^1.1.5",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.0.0",
     "react": "^16.13.1",
