--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^10.0.1",
     "axios": "^0.20.0",
-    "mathjs": "^7.3.0",
-    "nerdamer": "^1.1.5",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.0",
     "react-scripts": "3.4.3",
-    "recharts": "^1.8.5",
-    "tailwindcss": "^1.8.10"
+    "simple-simplex": "^1.0.1",
+    "tailwindcss": "^1.8.10",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
