--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run watch:css & react-scripts start",
     "build": "npm run build:css & react-scripts build",
     "build:css": "postcss src/css/tailwind.css -o src/css/styles.css",
     "watch:css": "postcss src/css/tailwind.css -o src/css/styles.css",
